# quicksilver

./: .claude.todo.swp  .claudignore  .gitignore  CMakeLists.txt  LICENSE  commands.out  example.qasm  gate_translations.py  generate_bisquit_binaries.py  generate_qasmbench_binaries.py  generate_rotation_data.py  nohup.out  plot_tools.py  plots.ipynb  qelib1.inc  qhyper_run_ablation.py  qmem_run_all.sh  qmem_run_workloads.py  scan_qasmbench.py  test.py  test.qasm
.ipynb_checkpoints/: analysis_tools-checkpoint.py  plot_tools-checkpoint.py  plots-checkpoint.ipynb
_benchmarks/stats/: QB_L_bwt_n177.txt  QB_L_bwt_n37.txt  QB_L_bwt_n57.txt  QB_L_bwt_n97.txt  QB_L_dnn_n33.txt  QB_L_dnn_n51.txt  QB_L_multiplier_n350.txt  QB_L_multiplier_n400.txt  QB_L_multiplier_n45.txt  QB_L_multiplier_n75.txt  QB_L_qugan_n111.txt  QB_L_qugan_n39.txt  QB_L_qugan_n395.txt  QB_L_qugan_n71.txt  QB_L_square_root_n45.txt  QB_L_square_root_n60.txt  QB_L_vqe_uccsd_n28.txt
benchmarks/stats/: QB_L_bwt_n177.txt  QB_L_bwt_n37.txt  QB_L_bwt_n57.txt  QB_L_bwt_n97.txt  QB_L_dnn_n33.txt  QB_L_dnn_n51.txt  QB_L_multiplier_n350.txt  QB_L_multiplier_n400.txt  QB_L_multiplier_n45.txt  QB_L_multiplier_n75.txt  QB_L_qugan_n111.txt  QB_L_qugan_n39.txt  QB_L_qugan_n395.txt  QB_L_qugan_n71.txt  QB_L_square_root_n45.txt  QB_L_square_root_n60.txt  QB_L_vqe_uccsd_n28.txt
bisquit/: ansatz.py  classiq_ham.py  common.py  hamiltonian.py  hamlib_scan_ftp_server.py  hamlib_snippets.py  qft.py  shor.py
bisquit/chemistry/: qiskit_nature_ex.py
bisquit/classiq/: v_c2h4o_ethylene_oxide_240.qmod.synthesis_options.json  v_hc3h2cn_288.qmod.synthesis_options.json
main/: oq2.cpp  oq2_check_compile.cpp  qs_build_lut.cpp  qs_ctxsim.cpp  qs_gen_binary.cpp  qs_mem_compile.cpp  qs_memory_scheduler.cpp  qs_report.cpp  qs_rotation_eval.cpp  qs_rw_test.cpp  qs_sim.cpp  qs_sim_mem_search.cpp  qs_throughput_estimator.cpp  quicksilver.cpp
rotation_data/: 0.bin.xz  1.bin.xz  10.bin.xz  11.bin.xz  12.bin.xz  13.bin.xz  14.bin.xz  15.bin.xz  16.bin.xz  17.bin.xz  18.bin.xz  19.bin.xz  2.bin.xz  3.bin.xz  4.bin.xz  5.bin.xz  6.bin.xz  7.bin.xz  8.bin.xz  9.bin.xz
scripts/: common.py  plotting.ipynb  run_command_list_on_pace.py  utils.py
scripts/.ipynb_checkpoints/: plotting-checkpoint.ipynb
scripts/dms/: compile.py  compile_all.sh  run_all.py  run_all.sh  run_all_workloads.py
scripts/hint/: run_all.sh  run_all_workloads.py
scripts/qoc/: run_all.py  run_all_workloads.py
scripts/rpc/: run_all_workloads.py
src/: argparse.cpp  argparse.h  dag.cpp  dag.h  dag.tpp  fixed_point.h  fixed_point.tpp  generic_io.cpp  generic_io.h  globals.cpp  globals.h  globals.tpp  instruction.cpp  instruction.h  instruction.tpp  instruction_fpa_hash.inl  program.cpp  program.h  sim.cpp  sim.h
src/ benchmark/: common.h  shor.cpp  shor.h
src/__sim/: client.h  clock.cpp  compute.cpp  meminfo.h  memory.cpp  memory.h  routing.h
src/__sim/compute/: replacement.h
src/__sim/compute/replacement/: lru.cpp  lru.h  lti.cpp  lti.h
src/_sim/: client.cpp  client.h  clock.cpp  clock.h  compute.h  epr_generator.cpp  factory.cpp  factory.h  operable.h  operable.tpp  routing.cpp  routing.h
src/_sim/cmp/: replacement.cpp  replacement.h
src/_sim/cmp/replacement/: lru.cpp  lru.h  lti.cpp  lti.h
src/_sim/utils/: defs.h  factory_builder.h
src/compiler/: memopt.cpp  memopt.h  memory_scheduler.cpp  memory_scheduler.h  memory_scheduler.tpp  program.cpp  program.h
src/compiler/memopt/: impl.cpp  impl.h
src/compiler/memopt/impl/: cost_aware.cpp  cost_aware.h  viszlai.cpp  viszlai.h
src/compiler/memory_scheduler/: eif.cpp  hint.cpp  impl.h
src/compiler/program/: expression.cpp  expression.h  rotation_manager.cpp  rotation_manager.h  rotation_synthesis.cpp  rotation_synthesis.h  value_info.cpp  value_info.h
src/compiler/program/oq2/: lexer.l  lexer_wrapper.h  parser.y
src/fixed_point/: angle.h  angle.tpp  numeric.h  numeric.tpp
src/memory/: compiler.cpp  compiler.h
src/oq2/: lexer.cpp  lexer.l  parser.cpp  parser.y  reader.cpp  reader.h
src/program/: expression.cpp  expression.h
src/sim/: client.cpp  client.h  clock.cpp  clock.h  compute.cpp  compute.h  compute_base.cpp  compute_base.h  compute_subsystem.cpp  compute_subsystem.h  epr_generator.cpp  epr_generator.h  factory.cpp  factory.h  ghz_generator.h  magic_state.cpp  magic_state.h  meminfo.h  memory.cpp  memory.h  memory_subsystem.cpp  memory_subsystem.h  notes.md  operable.cpp  operable.h  operable.tpp  os.h  production.cpp  production.h  rotation_subsystem.cpp  rotation_subsystem.h  routing.cpp  routing.h  routing_model.h  stall_monitor.h  stall_monitor.tpp  stats.cpp  stats.h  storage.cpp  storage.h
src/sim/cmp/: replacement.cpp  replacement.h
src/sim/cmp/replacement/: lru.cpp  lru.h  lti.cpp  lti.h
src/sim/compute/: core.h  core.tpp  execute.cpp  init.cpp  replacement.cpp
src/sim/configuration/: allocator.cpp  allocator.h  allocator.tpp  predefined_ed_protocols.cpp  predefined_ed_protocols.h  resource_estimation.cpp  resource_estimation.h  resource_estimation.tpp
src/sim/configuration/allocator/: epr.cpp  impl.h  magic_state.cpp
src/sim/mem/: remote_memory.h
src/sim/memory/: remote.cpp  remote.h
src/sim/production/: epr.cpp  epr.h  magic_state.cpp  magic_state.h
src/sim/routing_model/: multi_channel_bus.h
src/sim/utils/: defs.h  enums.h  estimation.h  factory_builder.cpp  factory_builder.h
